# template_music_programming

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  wav_gen.ld
include/tmp/: sequencer.hpp  sources.hpp  synth.hpp  types.hpp  wav_render.hpp
src/: constexpr_song.cpp  simple.cpp  song.cpp  test.cpp  wav_render.hpp
tests/: test.cpp
